--- a/burhan/tester/Makefile
+++ b/burhan/tester/Makefile
@@ -6,7 +6,7 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/15 17:40:21 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/14 07:20:30 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/14 16:28:27 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,9 +18,12 @@ LIBFT       = $(LIBFT_DIR)/libft.a
 
 # Files
 NAME        = lexer_tester
+
 SRC         = lexer_tester.c \
               basic_tests.c \
-			  dollar_tests.c
+			  dollar_tests.c \
+			  quoting_tests.c
+
 LEXER_SRC   = $(LEXER_DIR)/lexer.c \
               $(LEXER_DIR)/fetch_token.c \
               $(LEXER_DIR)/extract_token_value.c \
