--- a/burhan/tester/Makefile
+++ b/burhan/tester/Makefile
@@ -6,38 +6,56 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/15 17:40:21 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/14 21:09:50 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/15 12:38:13 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # Directories
-OBJ_DIR     = ./objs
-LEXER_DIR   = ../srcs/lexer
-LIBFT_DIR   = ../libft
-LIBFT       = $(LIBFT_DIR)/libft.a
+OBJ_DIR         = ./objs
+LEXER_DIR       = ../srcs/lexer
+EXPANDER_DIR    = ../srcs/expander
+LIBFT_DIR       = ../libft
+
+LEXER_OBJ_DIR       = $(LEXER_DIR)/objs
+EXPANDER_OBJ_DIR    = $(EXPANDER_DIR)/objs
+
+LIBFT           = $(LIBFT_DIR)/libft.a
 
 # Files
-NAME        = lexer_tester
+LEXER_TESTER_NAME     = lexer_tester
+EXPANDER_TESTER_NAME  = expander_tester
 
-SRC         = lexer_tester.c \
-              basic_tests.c \
-              dollar_tests.c \
-              quoting_tests.c \
-              invalid_quoting_tests.c \
-              redirection_tests.c
+# Shared test files
+COMMON_TEST_SRCS = basic_tests.c \
+                   dollar_tests.c \
+                   quoting_tests.c
+
+LEXER_ONLY_SRCS = lexer_tester.c \
+                  invalid_quoting_tests.c \
+                  redirection_tests.c
+
+EXPANDER_ONLY_SRCS = expander_tester.c
+
+# Combine
+LEXER_TEST_SRCS    = $(LEXER_ONLY_SRCS) $(COMMON_TEST_SRCS)
+EXPANDER_TEST_SRCS = $(EXPANDER_ONLY_SRCS) $(COMMON_TEST_SRCS)
 
 # Object file paths
-OBJ         = $(SRC:%.c=$(OBJ_DIR)/%.o)
-LEXER_OBJ   = $(wildcard $(LEXER_DIR)/objs/*.o)
+LEXER_OBJS    = $(LEXER_TEST_SRCS:%.c=$(OBJ_DIR)/%.o)
+EXPANDER_OBJS = $(EXPANDER_TEST_SRCS:%.c=$(OBJ_DIR)/%.o)
 
-# Compiler & flags
-CC          = cc
-CFLAGS      = -Wall -Wextra -Werror
-RM          = rm -f
+LEXER_MODULE_OBJS    = $(wildcard $(LEXER_OBJ_DIR)/*.o)
+EXPANDER_MODULE_OBJS = $(wildcard $(EXPANDER_OBJ_DIR)/*.o)
+
+# Compiler
+CC        = cc
+CFLAGS    = -Wall -Wextra -Werror
+RM        = rm -f
 
 # Default rule
-all: $(LIBFT) lexer_objs $(OBJ) $(NAME)
+all: lexer_test expander_test
 
+# Compile object files
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
@@ -50,24 +68,36 @@ $(LIBFT):
 lexer_objs:
 	$(MAKE) -C $(LEXER_DIR)
 
-$(NAME): $(OBJ) $(LIBFT)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJ) $(wildcard $(LEXER_DIR)/objs/*.o) $(LIBFT)
+expander_objs:
+	$(MAKE) -C $(EXPANDER_DIR)
 
-run: all
-	./$(NAME)
+# Link binaries
+$(LEXER_TESTER_NAME): $(LEXER_OBJS) lexer_objs $(LIBFT)
+	$(CC) $(CFLAGS) -o $@ $(LEXER_OBJS) $(LEXER_MODULE_OBJS) $(LIBFT)
 
-lexer_test: run
+$(EXPANDER_TESTER_NAME): $(EXPANDER_OBJS) expander_objs lexer_objs $(LIBFT)
+	$(CC) $(CFLAGS) -o $@ $(EXPANDER_OBJS) $(EXPANDER_MODULE_OBJS) $(LEXER_MODULE_OBJS) $(LIBFT)
 
+# Run
+lexer_test: $(LEXER_TESTER_NAME)
+	./$(LEXER_TESTER_NAME)
+
+expander_test: $(EXPANDER_TESTER_NAME)
+	./$(EXPANDER_TESTER_NAME)
+
+# Clean
 clean:
 	$(RM) -r $(OBJ_DIR)
 	$(MAKE) -C $(LEXER_DIR) clean
+	$(MAKE) -C $(EXPANDER_DIR) clean
 	$(MAKE) -C $(LIBFT_DIR) clean
 
 fclean: clean
-	$(RM) $(NAME)
+	$(RM) $(LEXER_TESTER_NAME) $(EXPANDER_TESTER_NAME)
 	$(MAKE) -C $(LEXER_DIR) fclean
+	$(MAKE) -C $(EXPANDER_DIR) fclean
 	$(MAKE) -C $(LIBFT_DIR) fclean
 
 re: fclean all
 
-.PHONY: all run lexer_test clean fclean re lexer_objs
+.PHONY: all clean fclean re lexer_test expander_test lexer_objs expander_objs
